# zippymesh-router

./: .dockerignore  .env.example  .gitignore  .npmignore  .zippy-private  ARCHITECTURE.md  CHANGELOG.md  COMPLETION_REPORT.md  CONTRIBUTING.md  CRITICAL_FIX_PLAN.md  DEPLOY-LOCAL.md  DEPLOYMENT_READINESS_REPORT.md  Dockerfile  ECOSYSTEM_CONTEXT.md.resolved  EXECUTION_SUMMARY.md  EXECUTIVE_SUMMARY_AND_ACTION_PLAN.md  FREE-TIER-FILES-OVERVIEW.txt  FREE-TIER-IMPLEMENTATION-SUMMARY.md  LICENSE  MESH_NETWORK_SECURITY_ARCHITECTURE.md  NETWORK_ASSESSMENT_REPORT.md  NOTICE.md  PRICING.md  QUICK-START-FREE-TIER.md  QUICK_START.md  README.md  README_DOCKER.md  RELEASE-NOTES-v0.3.0-ALPHA.md  ROADMAP.md  SECURITY.md  SECURITY_ANALYSIS.md  SESSION_COMPLETE.md  WALLET_GENERATION_MODULE.md  bootstrapEnv.cjs  cargo_check_output.txt  debug_log.txt  diagnose-sidecar.ps1  diff_output.txt  docker-compose.yml  mesh-setup.ps1  (+32 more)
config/: guardrails.config.json  node-policy.json
docs/: API.md  ARCHITECTURE.md  DISTRIBUTION_PLAN.md  INSTALLER_AND_SECURE_STORAGE.md  INSTALLER_MATRIX.md  OPEN_CORE_MANIFEST.md  PLAYBOOKS.md  PUBLIC_RELEASE_CHECKLIST.md  RELEASE.md  REPO_ROLES.md  RUNNING.md  SETUP.md  STANDALONE_README.md  WALLET_BACKUP_AND_INSTALLER_SAFETY.md  build-from-source.md  node-setup.md  oauth-setup.md  project_status.md
open-sse/: package.json
plans/: NETWORK_UPGRADE_PLAN.md  PORT_AND_ADMIN_SYSTEM_PLAN.md  (+2 more)
sidecar/: Cargo.toml  Dockerfile  zippy-node-manager.js
sidecar/src/: commands.rs  heartbeat.rs  inference.rs  main.rs  models.rs  p2p.rs  pricing.rs  state.rs  types.rs
(+466 files in other folders)
