[package]

name = "zippy-mesh-sidecar"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
libp2p = { version = "0.53", features = ["tcp", "dns", "websocket", "noise", "yamux", "gossipsub", "mdns", "kad", "macros", "tokio", "request-response", "cbor"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
axum = "0.7" # For internal API
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }
rand = "0.8"
actix-web = "4.13.0"
uuid = { version = "1.21.0", features = ["v4"] }
